build config fixes

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,11 +5,9 @@
         "rootDir": ".",
         "moduleResolution": "node",
         "isolatedModules": true,
-        // Needed for CommonJS modules
         "allowSyntheticDefaultImports": true,
-        "outDir": "./dist"
+        "declaration": true,
+        "sourceMap": false
     },
-
-    "include": ["./src/**/*"],
-    "exclude": ["./src/**/*.test.ts", "./src/**/*.mdx", "./src/**/*.demo.tsx"]
+    "exclude": ["node_modules", "dist", "templates", "website", "types"]
 }
