--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "url": "https://github.com/cyberia-studio/react-hooks/issues"
     },
     "main": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "types": "./types/index.d.ts",
     "exports": {
         ".": {
             "import": "./dist/index.js"
@@ -51,7 +51,9 @@
         "dist"
     ],
     "scripts": {
-        "build": "tsc && tsc-alias -p tsconfig.build.json",
+        "build": "npm run build:cjs && npm run build:esm",
+        "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir dist/cjs --target es5",
+        "build:esm": "tsc -p tsconfig.build.json --module esNext --outDir dist/esm --target es6",
         "publish": "npm publish --access public",
         "lint": "eslint '**/*.{js,jsx,ts,tsx}'"
     }
