--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "bugs": {
         "url": "https://github.com/cyberia-studio/react-hooks/issues"
     },
-    "main": "./dist/index.js",
-    "types": "./types/index.d.ts",
+    "main": "./dist/cjs/index.js",
+    "module": "./dist/esm/index.js",
+    "types": "./dist/esm/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/index.js"
+            "require": "./dist/cjs/index.js",
+            "import": "./dist/esm/index.js"
         }
     },
     "devDependencies": {
